Added web version of bestNormalize RJ-2021-041

--- a/_articles/RJ-2021-041/RJ-2021-041.Rmd
+++ b/_articles/RJ-2021-041/RJ-2021-041.Rmd
@@ -161,7 +161,7 @@ $$
 
 This nonparametric transformation as defined works well on the observed data, but it is not trivial to implement in modern settings where the transformation needs to be applied on new data; we discussed this issue and our solution to it in @orq_paper. Basically, on new data *within* the range of the original data, ORQ normalization will linearly interpolate between two of the original data points. On new data *outside* the range of the original data, the transformation extrapolates using a shifted logit approximation of the ranks to the original data. This is visualized below via the \code{iris} data set on the \code{Petal.Width} variable. 
 
-```{r orq_vis, echo = FALSE, fig.cap="ORQ normalization visualization on Fisher's iris data."}
+```{r orqvis, echo = FALSE, fig.cap="ORQ normalization visualization on Fisher's iris data."}
 
 x <- iris$Petal.Width
 on <- orderNorm(x, warn = FALSE)
@@ -227,7 +227,7 @@ First, we will generate and plot some skewed data:
 x <- rgamma(250, 1, 1)
 ```
 
-```{r simple_hist, echo = FALSE, fig.height=4, fig.width=6, out.height="1.3in", out.width="2.5in", fig.cap="Simulated skewed data for simple example."}
+```{r simplehist, echo = FALSE, fig.height=4, fig.width=6, out.height="1.3in", out.width="2.5in", fig.cap="Simulated skewed data for simple example."}
 MASS::truehist(x, nbins = 12)
 ```
 
@@ -239,13 +239,13 @@ To perform a suite of potential transformations and see how effectively they nor
 
 Evidently, the Box-Cox transformation performed the best, though many other transformations performed similarly. We can visualize the suite of transformations using the built-in \code{plot} method:
 
-```{r bn_plot, fig.cap="The suite of transformations estimated by default in \\pkg{bestNormalize} (trained on simulated right-skewed data)."}
+```{r bnplot, fig.cap="The suite of transformations estimated by default in \\pkg{bestNormalize} (trained on simulated right-skewed data)."}
 plot(BNobject, leg_loc = "topleft")
 ```
 
 Finally, we can execute the best performing normalization on new data with \code{predict(BNobject,\ new\textunderscore x)} or reverse the transformation with \code{predict(BNobject,\ new\textunderscore x\textunderscore t, inverse = TRUE)}. Note that normalized values can either be obtained using \code{predict} or by extracting \code{x.t} from the object. The best transformation, in this case, is plotted in Figure 4.
 
-```{r hist_best, warning=FALSE, echo = FALSE, fig.height=8, fig.width = 7.8, fig.cap="Summary of transformations performed on simulated right-skewed data."}
+```{r histbest, warning=FALSE, echo = FALSE, fig.height=8, fig.width = 7.8, fig.cap="Summary of transformations performed on simulated right-skewed data."}
 par(mfrow = c(2,2), mar = c(4, 4, 4, 1))
 MASS::truehist(x, main = "Original Data")
 MASS::truehist(BNobject$x.t, main = paste("Best Normalizing Transformation:", class(BNobject$chosen_transform)[1]), nbins = 12)
@@ -278,7 +278,7 @@ lines(xx, predict(yeojohnson_obj, newdata = xx), col = 3)
 lines(xx, predict(orderNorm_obj, newdata = xx), col = 4)
 ```
 
-```{r vis_data2, echo = FALSE, fig.height = 4, fig.width = 6, out.height = "2.5in", out.width = "4.375in", fig.cap="Manually plotting transformations trained on simulated right-skewed data."}
+```{r visdata2, echo = FALSE, fig.height = 4, fig.width = 6, out.height = "2.5in", out.width = "4.375in", fig.cap="Manually plotting transformations trained on simulated right-skewed data."}
 xx <- seq(min(x), max(x), length = 100) # vector of values over domain of x
 plot(xx, predict(arcsinh_obj, newdata = xx), type = "l", col = 1, ylim = c(-4, 4),
      xlab = 'x', ylab = "g(x)")
@@ -294,7 +294,7 @@ legend("bottomright", legend = c("arcsinh", "Box-Cox", "Yeo-Johnson", "OrderNorm
 
 To examine how each of the normalization methods performed (in-sample), we can visualize the transformed values in histograms (Figure 6), which plot the transformed data, \code{x.t}, stored in the transformation objects we created previously. 
 
-```{r hist_trans, fig.height=6, fig.width = 6, echo = FALSE, out.height="4in", out.width="4in", fig.cap="Normalized values for trained transformations on simulated right-skewed data."}
+```{r histtrans, fig.height=6, fig.width = 6, echo = FALSE, out.height="4in", out.width="4in", fig.cap="Normalized values for trained transformations on simulated right-skewed data."}
 par(mfrow = c(2,2))
 MASS::truehist(arcsinh_obj$x.t, main = "Arcsinh transformation", nbins = 12)
 MASS::truehist(boxcox_obj$x.t, main = "Box-Cox transformation", nbins = 12)
@@ -339,7 +339,7 @@ parallel::stopCluster(cl)
 
 The amount by which this parallelization will speed up the estimation of out-of-sample estimates depends (for the most part) on the number of repeats, the number of cores, and the sample size of the vector to be normalized. The plot below shows the estimation time for a run of \code{bestNormalize} with 15 repeats of 10-fold CV on a gamma-distributed random variable with various sample sizes and numbers of cores. 
 
-```{r parallel_timings, echo = FALSE, fig.height = 4, fig.width = 4.5, fig.cap="Potential speedup using parallelization functionality."}
+```{r paralleltimings, echo = FALSE, fig.height = 4, fig.width = 4.5, fig.cap="Potential speedup using parallelization functionality."}
 knitr::include_graphics("figs/parallel_timings.pdf")
 ```
 
@@ -505,7 +505,9 @@ tab[17,2] <- my_meansd(autotrader$mileage)
 tab[18,2] <- my_range(autotrader$mileage)
 
 tab %>% 
-  kable(booktabs = TRUE, linesep ="", caption = "Sample characteristics of `autotrader` data.") %>% 
+  kable(
+    format = ifelse(knitr::is_html_output(), "html", "latex"), booktabs = TRUE, 
+    linesep ="", caption = "Sample characteristics of `autotrader` data.") %>% 
   kable_styling(c("striped", "condensed"), full_width = FALSE)
 ```
 
@@ -533,7 +535,7 @@ Similarly, the ORQ normalization performed best for mileage.
 
 For age, we see something peculiar; none of the normalizing transformations performed well according to the normality statistics. By plotting the data, it becomes evident that the frequency of ties in age makes it very difficult to find a normalizing transformation (see figure below). Even so, \code{orderNorm} is chosen as it has the lowest estimated $P/DF$ statistic. 
 
-```{r hist_app, fig.height=3, fig.width=6, echo = FALSE, out.height="2.1in", out.width="4.2in", fig.cap = "Distributions of car variables before and after normalization."}
+```{r histapp, fig.height=3, fig.width=6, echo = FALSE, out.height="2.1in", out.width="4.2in", fig.cap = "Distributions of car variables before and after normalization."}
 par(mfcol = c(2, 3), mar = c(4,3,1,1))
 MASS::truehist(autotrader$price, main = "", xlab = "Price")
 MASS::truehist(priceBN$x.t, main = "", xlab = "Price (transformed)")
@@ -576,7 +578,9 @@ s$coefficients %>%
   rownames_to_column("Variable") %>% 
   mutate(Variable = c("Intercept", "g(Mileage)", "g(Age)"),
          `Pr(>|t|)` = pvalr(`Pr(>|t|)`)) %>% 
-  kable(align = c("lrrrr"), digits = 3, booktabs = TRUE, caption = "TBS regression results for autotrader data.") %>% 
+  kable(
+    format = ifelse(knitr::is_html_output(), "html", "latex"), booktabs = TRUE, 
+    align = c("lrrrr"), digits = 3, caption = "TBS regression results for autotrader data.") %>% 
   kable_styling(full_width = FALSE)
 ```
 
@@ -595,7 +599,7 @@ visreg(fit, "m.t",
 ```
 
 
-```{r linear_visreg, out.width = "80%", echo = FALSE, fig.cap = "TBS regression visualized on transformed units (left) and original units (right)."}
+```{r linearvisreg, out.width = "80%", echo = FALSE, fig.cap = "TBS regression visualized on transformed units (left) and original units (right)."}
 mileage.xx <- seq(min(autotrader$mileage), max(autotrader$mileage), len = 100)
 price.xx <- seq(min(autotrader$price), max(autotrader$price), len = 100)
 yearsold.xx <- seq(min(autotrader$yearsold), max(autotrader$yearsold), len = 100)
@@ -639,7 +643,7 @@ plot(autotrader$yearsold, autotrader$price)
 lines(new_yo, line_vals)
 ```
 
-```{r gam_tbs_model, out.width = "80%", eval = TRUE, echo = FALSE, fig.cap="Age effect on car price (re-transformed to original unit)."}
+```{r gam-tbs-model, out.width = "80%", eval = TRUE, echo = FALSE, fig.cap="Age effect on car price (re-transformed to original unit)."}
 new_yo <- seq(min(autotrader$yearsold), max(autotrader$yearsold), len = 100)
 newX <- data.frame(yearsold = new_yo, 
                   mileage = median(autotrader$mileage))
@@ -700,7 +704,9 @@ names(idx)[3] <- "RSQ"
 
 tab %>% 
   Reduce(rbind, .) %>% 
-  kable(digits = 3, booktabs = TRUE, caption = "CV prediction accuracy of various ML methods.") %>% 
+  kable(
+    format = ifelse(knitr::is_html_output(), "html", "latex"), booktabs = TRUE, 
+    digits = 3, caption = "CV prediction accuracy of various ML methods.") %>% 
   kable_styling(full_width = FALSE) %>%
   kableExtra::group_rows(index = idx)
 ```
@@ -726,7 +732,10 @@ colnames(res) <- toupper(results$glmnet$.metric)
 rownames(res) <- names(results)
 res <- rownames_to_column(data.frame(res), "Method")
 
-kable(res, digits = c(0, 0, 3, 0), booktabs = TRUE, caption = "Test data prediction accuracy of various ML methods. RMSE and MAE can be interpreted in terms of 2017 US dollars.") %>% 
+kable(
+  res, 
+  format = ifelse(knitr::is_html_output(), "html", "latex"), booktabs = TRUE, 
+  digits = c(0, 0, 3, 0), caption = "Test data prediction accuracy of various ML methods. RMSE and MAE can be interpreted in terms of 2017 US dollars.") %>% 
   kable_styling(full_width = FALSE)
 ```
 
