--- a/_web/articles/RJ-2021-041/RJ-2021-041.tex
+++ b/_web/articles/RJ-2021-041/RJ-2021-041.tex
@@ -194,11 +194,11 @@ the \code{Petal.Width} variable.
 \begin{Schunk}
 \begin{figure}
 
-{\centering \includegraphics[width=1\linewidth]{figs/orq_vis-1} 
+{\centering \includegraphics[width=1\linewidth]{figs/orqvis-1} 
 
 }
 
-\caption[ORQ normalization visualization on Fisher's iris data]{ORQ normalization visualization on Fisher's iris data.}(\#fig:orq_vis)
+\caption[ORQ normalization visualization on Fisher's iris data]{ORQ normalization visualization on Fisher's iris data.}(\#fig:orqvis)
 \end{figure}
 \end{Schunk}
 
@@ -334,11 +334,11 @@ x <- rgamma(250, 1, 1)
 \begin{Schunk}
 \begin{figure}
 
-{\centering \includegraphics[width=2.5in,height=1.3in]{figs/simple_hist-1} 
+{\centering \includegraphics[width=2.5in,height=1.3in]{figs/simplehist-1} 
 
 }
 
-\caption[Simulated skewed data for simple example]{Simulated skewed data for simple example.}(\#fig:simple_hist)
+\caption[Simulated skewed data for simple example]{Simulated skewed data for simple example.}(\#fig:simplehist)
 \end{figure}
 \end{Schunk}
 
@@ -381,11 +381,11 @@ plot(BNobject, leg_loc = "topleft")
 \end{Sinput}
 \begin{figure}
 
-{\centering \includegraphics[width=1\linewidth]{figs/bn_plot-1} 
+{\centering \includegraphics[width=1\linewidth]{figs/bnplot-1} 
 
 }
 
-\caption[The suite of transformations estimated by default in \pkg{bestNormalize} (trained on simulated right-skewed data)]{The suite of transformations estimated by default in \pkg{bestNormalize} (trained on simulated right-skewed data).}(\#fig:bn_plot)
+\caption[The suite of transformations estimated by default in \pkg{bestNormalize} (trained on simulated right-skewed data)]{The suite of transformations estimated by default in \pkg{bestNormalize} (trained on simulated right-skewed data).}(\#fig:bnplot)
 \end{figure}
 \end{Schunk}
 
@@ -400,11 +400,11 @@ this case, is plotted in Figure 4.
 \begin{Schunk}
 \begin{figure}
 
-{\centering \includegraphics[width=1\linewidth]{figs/hist_best-1} 
+{\centering \includegraphics[width=1\linewidth]{figs/histbest-1} 
 
 }
 
-\caption[Summary of transformations performed on simulated right-skewed data]{Summary of transformations performed on simulated right-skewed data.}(\#fig:hist_best)
+\caption[Summary of transformations performed on simulated right-skewed data]{Summary of transformations performed on simulated right-skewed data.}(\#fig:histbest)
 \end{figure}
 \end{Schunk}
 
@@ -484,11 +484,11 @@ lines(xx, predict(orderNorm_obj, newdata = xx), col = 4)
 \begin{Schunk}
 \begin{figure}
 
-{\centering \includegraphics[width=4.375in,height=2.5in]{figs/vis_data2-1} 
+{\centering \includegraphics[width=4.375in,height=2.5in]{figs/visdata2-1} 
 
 }
 
-\caption[Manually plotting transformations trained on simulated right-skewed data]{Manually plotting transformations trained on simulated right-skewed data.}(\#fig:vis_data2)
+\caption[Manually plotting transformations trained on simulated right-skewed data]{Manually plotting transformations trained on simulated right-skewed data.}(\#fig:visdata2)
 \end{figure}
 \end{Schunk}
 
@@ -504,11 +504,11 @@ objects we created previously.
 \begin{Schunk}
 \begin{figure}
 
-{\centering \includegraphics[width=4in,height=4in]{figs/hist_trans-1} 
+{\centering \includegraphics[width=4in,height=4in]{figs/histtrans-1} 
 
 }
 
-\caption[Normalized values for trained transformations on simulated right-skewed data]{Normalized values for trained transformations on simulated right-skewed data.}(\#fig:hist_trans)
+\caption[Normalized values for trained transformations on simulated right-skewed data]{Normalized values for trained transformations on simulated right-skewed data.}(\#fig:histtrans)
 \end{figure}
 \end{Schunk}
 
@@ -665,7 +665,7 @@ of cores.
 
 }
 
-\caption[Potential speedup using parallelization functionality]{Potential speedup using parallelization functionality.}(\#fig:parallel_timings)
+\caption[Potential speedup using parallelization functionality]{Potential speedup using parallelization functionality.}(\#fig:paralleltimings)
 \end{figure}
 \end{Schunk}
 
@@ -932,113 +932,41 @@ autotrader$yearsold <- 2017 - autotrader$Year
 \end{Schunk}
 
 \begin{Schunk}
-<table class="table table-striped table-condensed" style="width: auto !important; margin-left: auto; margin-right: auto;">
-<caption>(\#tab:unnamed-chunk-10)Sample characteristics of `autotrader` data.</caption>
- <thead>
-  <tr>
-   <th style="text-align:left;">  </th>
-   <th style="text-align:left;"> Overall (N=6,283) </th>
-  </tr>
- </thead>
-<tbody>
-  <tr>
-   <td style="text-align:left;"> Make </td>
-   <td style="text-align:left;">  </td>
-  </tr>
-  <tr>
-   <td style="text-align:left;"> -  Acura </td>
-   <td style="text-align:left;"> 185 (2.9%) </td>
-  </tr>
-  <tr>
-   <td style="text-align:left;"> -  Buick </td>
-   <td style="text-align:left;"> 252 (4.0%) </td>
-  </tr>
-  <tr>
-   <td style="text-align:left;"> -  Chevrolet </td>
-   <td style="text-align:left;"> 1,257 (20.0%) </td>
-  </tr>
-  <tr>
-   <td style="text-align:left;"> -  GMC </td>
-   <td style="text-align:left;"> 492 (7.8%) </td>
-  </tr>
-  <tr>
-   <td style="text-align:left;"> -  Honda </td>
-   <td style="text-align:left;"> 1,029 (16.4%) </td>
-  </tr>
-  <tr>
-   <td style="text-align:left;"> -  Hyundai </td>
-   <td style="text-align:left;"> 381 (6.1%) </td>
-  </tr>
-  <tr>
-   <td style="text-align:left;"> -  Mazda </td>
-   <td style="text-align:left;"> 272 (4.3%) </td>
-  </tr>
-  <tr>
-   <td style="text-align:left;"> -  Nissan </td>
-   <td style="text-align:left;"> 735 (11.7%) </td>
-  </tr>
-  <tr>
-   <td style="text-align:left;"> -  Pontiac </td>
-   <td style="text-align:left;"> 63 (1.0%) </td>
-  </tr>
-  <tr>
-   <td style="text-align:left;"> -  Toyota </td>
-   <td style="text-align:left;"> 1,202 (19.1%) </td>
-  </tr>
-  <tr>
-   <td style="text-align:left;"> -  Volkswagen </td>
-   <td style="text-align:left;"> 415 (6.6%) </td>
-  </tr>
-  <tr>
-   <td style="text-align:left;"> Price ($) </td>
-   <td style="text-align:left;">  </td>
-  </tr>
-  <tr>
-   <td style="text-align:left;"> -  Mean (SD) </td>
-   <td style="text-align:left;"> 17,145 (8,346) </td>
-  </tr>
-  <tr>
-   <td style="text-align:left;"> -  Range </td>
-   <td style="text-align:left;"> 722 - 64,998 </td>
-  </tr>
-  <tr>
-   <td style="text-align:left;"> Mileage </td>
-   <td style="text-align:left;">  </td>
-  </tr>
-  <tr>
-   <td style="text-align:left;"> -  Mean (SD) </td>
-   <td style="text-align:left;"> 63,638 (49,125) </td>
-  </tr>
-  <tr>
-   <td style="text-align:left;"> -  Range </td>
-   <td style="text-align:left;"> 2 - 325,556 </td>
-  </tr>
-  <tr>
-   <td style="text-align:left;"> Year </td>
-   <td style="text-align:left;">  </td>
-  </tr>
-  <tr>
-   <td style="text-align:left;"> -  Mean (SD) </td>
-   <td style="text-align:left;"> 2011.9 (3.5) </td>
-  </tr>
-  <tr>
-   <td style="text-align:left;"> -  Range </td>
-   <td style="text-align:left;"> 2000.0 - 2016.0 </td>
-  </tr>
-  <tr>
-   <td style="text-align:left;"> Age (years old) </td>
-   <td style="text-align:left;">  </td>
-  </tr>
-  <tr>
-   <td style="text-align:left;"> -  Mean (SD) </td>
-   <td style="text-align:left;"> 5.1 (3.5) </td>
-  </tr>
-  <tr>
-   <td style="text-align:left;"> -  Range </td>
-   <td style="text-align:left;"> 1.0 - 17.0 </td>
-  </tr>
-</tbody>
-</table>
+\begin{table}
+
+\caption{(\#tab:unnamed-chunk-10)Sample characteristics of `autotrader` data.}
+\centering
+\begin{tabular}[t]{ll}
+\toprule
+ & Overall (N=6,283)\\
+\midrule
+Make & \\
+-  Acura & 185 (2.9\%)\\
+-  Buick & 252 (4.0\%)\\
+-  Chevrolet & 1,257 (20.0\%)\\
+-  GMC & 492 (7.8\%)\\
+-  Honda & 1,029 (16.4\%)\\
+-  Hyundai & 381 (6.1\%)\\
+-  Mazda & 272 (4.3\%)\\
+-  Nissan & 735 (11.7\%)\\
+-  Pontiac & 63 (1.0\%)\\
+-  Toyota & 1,202 (19.1\%)\\
+-  Volkswagen & 415 (6.6\%)\\
+Price (\$) & \\
+-  Mean (SD) & 17,145 (8,346)\\
+-  Range & 722 - 64,998\\
+Mileage & \\
+-  Mean (SD) & 63,638 (49,125)\\
+-  Range & 2 - 325,556\\
+Year & \\
+-  Mean (SD) & 2011.9 (3.5)\\
+-  Range & 2000.0 - 2016.0\\
+Age (years old) & \\
+-  Mean (SD) & 5.1 (3.5)\\
+-  Range & 1.0 - 17.0\\
+\bottomrule
+\end{tabular}
+\end{table}
 
 \end{Schunk}
 
@@ -1153,11 +1081,11 @@ estimated \(P/DF\) statistic.
 \begin{Schunk}
 \begin{figure}
 
-{\centering \includegraphics[width=4.2in,height=2.1in]{figs/hist_app-1} 
+{\centering \includegraphics[width=4.2in,height=2.1in]{figs/histapp-1} 
 
 }
 
-\caption[Distributions of car variables before and after normalization]{Distributions of car variables before and after normalization.}(\#fig:hist_app)
+\caption[Distributions of car variables before and after normalization]{Distributions of car variables before and after normalization.}(\#fig:histapp)
 \end{figure}
 \end{Schunk}
 
@@ -1174,41 +1102,20 @@ fit <- lm(p.t ~ m.t + yo.t)
 \end{Schunk}
 
 \begin{Schunk}
-<table class="table" style="width: auto !important; margin-left: auto; margin-right: auto;">
-<caption>(\#tab:unnamed-chunk-11)TBS regression results for autotrader data.</caption>
- <thead>
-  <tr>
-   <th style="text-align:left;"> Variable </th>
-   <th style="text-align:right;"> Estimate </th>
-   <th style="text-align:right;"> Std. Error </th>
-   <th style="text-align:right;"> t value </th>
-   <th style="text-align:right;"> Pr(&gt;|t|) </th>
-  </tr>
- </thead>
-<tbody>
-  <tr>
-   <td style="text-align:left;"> Intercept </td>
-   <td style="text-align:right;"> 0.005 </td>
-   <td style="text-align:right;"> 0.010 </td>
-   <td style="text-align:right;"> 0.553 </td>
-   <td style="text-align:right;"> 0.58 </td>
-  </tr>
-  <tr>
-   <td style="text-align:left;"> g(Mileage) </td>
-   <td style="text-align:right;"> -0.234 </td>
-   <td style="text-align:right;"> 0.016 </td>
-   <td style="text-align:right;"> -14.966 </td>
-   <td style="text-align:right;"> &lt; 0.001 </td>
-  </tr>
-  <tr>
-   <td style="text-align:left;"> g(Age) </td>
-   <td style="text-align:right;"> -0.441 </td>
-   <td style="text-align:right;"> 0.016 </td>
-   <td style="text-align:right;"> -27.134 </td>
-   <td style="text-align:right;"> &lt; 0.001 </td>
-  </tr>
-</tbody>
-</table>
+\begin{table}
+
+\caption{(\#tab:unnamed-chunk-11)TBS regression results for autotrader data.}
+\centering
+\begin{tabular}[t]{lrrrr}
+\toprule
+Variable & Estimate & Std. Error & t value & Pr(>|t|)\\
+\midrule
+Intercept & 0.005 & 0.010 & 0.553 & 0.58\\
+g(Mileage) & -0.234 & 0.016 & -14.966 & < 0.001\\
+g(Age) & -0.441 & 0.016 & -27.134 & < 0.001\\
+\bottomrule
+\end{tabular}
+\end{table}
 
 \end{Schunk}
 
@@ -1242,11 +1149,11 @@ visreg(fit, "m.t",
 \begin{Schunk}
 \begin{figure}
 
-{\centering \includegraphics[width=0.8\linewidth]{figs/linear_visreg-1} 
+{\centering \includegraphics[width=0.8\linewidth]{figs/linearvisreg-1} 
 
 }
 
-\caption[TBS regression visualized on transformed units (left) and original units (right)]{TBS regression visualized on transformed units (left) and original units (right).}(\#fig:linear_visreg)
+\caption[TBS regression visualized on transformed units (left) and original units (right)]{TBS regression visualized on transformed units (left) and original units (right).}(\#fig:linearvisreg)
 \end{figure}
 \end{Schunk}
 
@@ -1272,11 +1179,11 @@ lines(new_yo, line_vals)
 \begin{Schunk}
 \begin{figure}
 
-{\centering \includegraphics[width=0.8\linewidth]{figs/gam_tbs_model-1} 
+{\centering \includegraphics[width=0.8\linewidth]{figs/gam-tbs-model-1} 
 
 }
 
-\caption[Age effect on car price (re-transformed to original unit)]{Age effect on car price (re-transformed to original unit).}(\#fig:gam_tbs_model)
+\caption[Age effect on car price (re-transformed to original unit)]{Age effect on car price (re-transformed to original unit).}(\#fig:gam-tbs-model)
 \end{figure}
 \end{Schunk}
 
@@ -1322,116 +1229,32 @@ summary(r) # Extra-sample CV results
 \end{Schunk}
 
 \begin{Schunk}
-<table class="table" style="width: auto !important; margin-left: auto; margin-right: auto;">
-<caption>(\#tab:unnamed-chunk-14)CV prediction accuracy of various ML methods.</caption>
- <thead>
-  <tr>
-   <th style="text-align:left;">   </th>
-   <th style="text-align:right;"> Min. </th>
-   <th style="text-align:right;"> 1st Qu. </th>
-   <th style="text-align:right;"> Median </th>
-   <th style="text-align:right;"> Mean </th>
-   <th style="text-align:right;"> 3rd Qu. </th>
-   <th style="text-align:right;"> Max. </th>
-   <th style="text-align:right;"> NA's </th>
-  </tr>
- </thead>
-<tbody>
-  <tr grouplength="3"><td colspan="8" style="border-bottom: 1px solid;"><strong>MAE</strong></td></tr>
-<tr>
-   <td style="text-align:left;padding-left: 2em;" indentlevel="1"> glmnet </td>
-   <td style="text-align:right;"> 0.181 </td>
-   <td style="text-align:right;"> 0.184 </td>
-   <td style="text-align:right;"> 0.186 </td>
-   <td style="text-align:right;"> 0.189 </td>
-   <td style="text-align:right;"> 0.194 </td>
-   <td style="text-align:right;"> 0.198 </td>
-   <td style="text-align:right;"> 0 </td>
-  </tr>
-  <tr>
-   <td style="text-align:left;padding-left: 2em;" indentlevel="1"> earth </td>
-   <td style="text-align:right;"> 0.147 </td>
-   <td style="text-align:right;"> 0.151 </td>
-   <td style="text-align:right;"> 0.154 </td>
-   <td style="text-align:right;"> 0.155 </td>
-   <td style="text-align:right;"> 0.158 </td>
-   <td style="text-align:right;"> 0.163 </td>
-   <td style="text-align:right;"> 0 </td>
-  </tr>
-  <tr>
-   <td style="text-align:left;padding-left: 2em;" indentlevel="1"> rf </td>
-   <td style="text-align:right;"> 0.136 </td>
-   <td style="text-align:right;"> 0.141 </td>
-   <td style="text-align:right;"> 0.143 </td>
-   <td style="text-align:right;"> 0.144 </td>
-   <td style="text-align:right;"> 0.147 </td>
-   <td style="text-align:right;"> 0.157 </td>
-   <td style="text-align:right;"> 0 </td>
-  </tr>
-  <tr grouplength="3"><td colspan="8" style="border-bottom: 1px solid;"><strong>RMSE</strong></td></tr>
-<tr>
-   <td style="text-align:left;padding-left: 2em;" indentlevel="1"> glmnet </td>
-   <td style="text-align:right;"> 0.242 </td>
-   <td style="text-align:right;"> 0.247 </td>
-   <td style="text-align:right;"> 0.252 </td>
-   <td style="text-align:right;"> 0.256 </td>
-   <td style="text-align:right;"> 0.264 </td>
-   <td style="text-align:right;"> 0.276 </td>
-   <td style="text-align:right;"> 0 </td>
-  </tr>
-  <tr>
-   <td style="text-align:left;padding-left: 2em;" indentlevel="1"> earth </td>
-   <td style="text-align:right;"> 0.203 </td>
-   <td style="text-align:right;"> 0.209 </td>
-   <td style="text-align:right;"> 0.214 </td>
-   <td style="text-align:right;"> 0.217 </td>
-   <td style="text-align:right;"> 0.226 </td>
-   <td style="text-align:right;"> 0.235 </td>
-   <td style="text-align:right;"> 0 </td>
-  </tr>
-  <tr>
-   <td style="text-align:left;padding-left: 2em;" indentlevel="1"> rf </td>
-   <td style="text-align:right;"> 0.193 </td>
-   <td style="text-align:right;"> 0.208 </td>
-   <td style="text-align:right;"> 0.213 </td>
-   <td style="text-align:right;"> 0.210 </td>
-   <td style="text-align:right;"> 0.215 </td>
-   <td style="text-align:right;"> 0.217 </td>
-   <td style="text-align:right;"> 0 </td>
-  </tr>
-  <tr grouplength="3"><td colspan="8" style="border-bottom: 1px solid;"><strong>RSQ</strong></td></tr>
-<tr>
-   <td style="text-align:left;padding-left: 2em;" indentlevel="1"> glmnet </td>
-   <td style="text-align:right;"> 0.767 </td>
-   <td style="text-align:right;"> 0.772 </td>
-   <td style="text-align:right;"> 0.785 </td>
-   <td style="text-align:right;"> 0.782 </td>
-   <td style="text-align:right;"> 0.789 </td>
-   <td style="text-align:right;"> 0.801 </td>
-   <td style="text-align:right;"> 0 </td>
-  </tr>
-  <tr>
-   <td style="text-align:left;padding-left: 2em;" indentlevel="1"> earth </td>
-   <td style="text-align:right;"> 0.807 </td>
-   <td style="text-align:right;"> 0.833 </td>
-   <td style="text-align:right;"> 0.845 </td>
-   <td style="text-align:right;"> 0.842 </td>
-   <td style="text-align:right;"> 0.855 </td>
-   <td style="text-align:right;"> 0.864 </td>
-   <td style="text-align:right;"> 0 </td>
-  </tr>
-  <tr>
-   <td style="text-align:left;padding-left: 2em;" indentlevel="1"> rf </td>
-   <td style="text-align:right;"> 0.835 </td>
-   <td style="text-align:right;"> 0.845 </td>
-   <td style="text-align:right;"> 0.855 </td>
-   <td style="text-align:right;"> 0.854 </td>
-   <td style="text-align:right;"> 0.860 </td>
-   <td style="text-align:right;"> 0.873 </td>
-   <td style="text-align:right;"> 0 </td>
-  </tr>
-</tbody>
-</table>
+\begin{table}
+
+\caption{(\#tab:unnamed-chunk-14)CV prediction accuracy of various ML methods.}
+\centering
+\begin{tabular}[t]{lrrrrrrr}
+\toprule
+  & Min. & 1st Qu. & Median & Mean & 3rd Qu. & Max. & NA's\\
+\midrule
+\addlinespace[0.3em]
+\multicolumn{8}{l}{\textbf{MAE}}\\
+\hspace{1em}glmnet & 0.181 & 0.184 & 0.186 & 0.189 & 0.194 & 0.198 & 0\\
+\hspace{1em}earth & 0.147 & 0.151 & 0.154 & 0.155 & 0.158 & 0.163 & 0\\
+\hspace{1em}rf & 0.136 & 0.141 & 0.143 & 0.144 & 0.147 & 0.157 & 0\\
+\addlinespace[0.3em]
+\multicolumn{8}{l}{\textbf{RMSE}}\\
+\hspace{1em}glmnet & 0.242 & 0.247 & 0.252 & 0.256 & 0.264 & 0.276 & 0\\
+\hspace{1em}earth & 0.203 & 0.209 & 0.214 & 0.217 & 0.226 & 0.235 & 0\\
+\hspace{1em}rf & 0.193 & 0.208 & 0.213 & 0.210 & 0.215 & 0.217 & 0\\
+\addlinespace[0.3em]
+\multicolumn{8}{l}{\textbf{RSQ}}\\
+\hspace{1em}glmnet & 0.767 & 0.772 & 0.785 & 0.782 & 0.789 & 0.801 & 0\\
+\hspace{1em}earth & 0.807 & 0.833 & 0.845 & 0.842 & 0.855 & 0.864 & 0\\
+\hspace{1em}rf & 0.835 & 0.845 & 0.855 & 0.854 & 0.860 & 0.873 & 0\\
+\bottomrule
+\end{tabular}
+\end{table}
 
 \end{Schunk}
 
@@ -1456,37 +1279,20 @@ results
 \end{Schunk}
 
 \begin{Schunk}
-<table class="table" style="width: auto !important; margin-left: auto; margin-right: auto;">
-<caption>(\#tab:unnamed-chunk-16)Test data prediction accuracy of various ML methods. RMSE and MAE can be interpreted in terms of 2017 US dollars.</caption>
- <thead>
-  <tr>
-   <th style="text-align:left;"> Method </th>
-   <th style="text-align:right;"> RMSE </th>
-   <th style="text-align:right;"> RSQ </th>
-   <th style="text-align:right;"> MAE </th>
-  </tr>
- </thead>
-<tbody>
-  <tr>
-   <td style="text-align:left;"> glmnet </td>
-   <td style="text-align:right;"> 4076 </td>
-   <td style="text-align:right;"> 0.772 </td>
-   <td style="text-align:right;"> 2847 </td>
-  </tr>
-  <tr>
-   <td style="text-align:left;"> earth </td>
-   <td style="text-align:right;"> 3619 </td>
-   <td style="text-align:right;"> 0.814 </td>
-   <td style="text-align:right;"> 2500 </td>
-  </tr>
-  <tr>
-   <td style="text-align:left;"> rf </td>
-   <td style="text-align:right;"> 3257 </td>
-   <td style="text-align:right;"> 0.853 </td>
-   <td style="text-align:right;"> 2294 </td>
-  </tr>
-</tbody>
-</table>
+\begin{table}
+
+\caption{(\#tab:unnamed-chunk-16)Test data prediction accuracy of various ML methods. RMSE and MAE can be interpreted in terms of 2017 US dollars.}
+\centering
+\begin{tabular}[t]{lrrr}
+\toprule
+Method & RMSE & RSQ & MAE\\
+\midrule
+glmnet & 4076 & 0.772 & 2847\\
+earth & 3619 & 0.814 & 2500\\
+rf & 3257 & 0.853 & 2294\\
+\bottomrule
+\end{tabular}
+\end{table}
 
 \end{Schunk}
 
