--- a/index.Rmd
+++ b/index.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "The R Journal"
+title: "Overview"
 site: rjdistill::rjdistill_website
 ---
 
@@ -54,13 +54,13 @@ p > span.doi, td > span.doi {
 }
 ```
 
-The R Journal is the open access, refereed journal of the R project for statistical computing. It features short to medium length articles covering topics that should be of interest to users or developers of R.
+The R Journal is the peer-reviewed, open-access scientific journal, published by The R Foundation. It features short to medium length articles (up to 20 pages) covering topics of interest to users and developers of R. For example, description and implementation details of R packages, surveys or reviews of R software related to a particular area, applications of R software or descriptions of teaching resources related to R. 
 
-The R Journal intends to reach a wide audience and have a thorough review process. Papers are expected to be reasonably short, clearly written, not too technical, and of course focused on R. Authors of refereed articles should take care to:
+The R Journal reaches a wide audience and has a thorough review process. Papers are expected to be concise, clearly written, not too technical, clearly related R, and follow reproducible practices. Additional technical details and examples could be included as supplementary material. Authors of refereed articles should take care to:
 
 * put their contribution in context, in particular discuss related R functions or packages;
 * explain the motivation for their contribution;
-* provide code examples that are reproducible.
+* provide code to reproduce the material in the paper.
 
 ## Article types
 
@@ -68,39 +68,69 @@ The R Journal accepts a variety of article topics including:
 
 <!-- Following revision of the content description of The R Journal, from January 2017 submitted articles may include: -->
 
-**Reviews and proposals:**
-surveying and discussing challenges and opportunities of potential importance for the broader R community, including proposals and proof-of-concept implementations.
+- Reviews and proposals: surveying and discussing challenges and opportunities of potential importance for the broader R community, including proposals and proof-of-concept implementations.
 
-**Comparisons and benchmarking:**
-of implementations in base-R and contributed packages with each other, and where relevant with implementations in other software systems.
+- Comparisons and benchmarking: of implementations in base-R and contributed packages with each other, and where relevant with implementations in other software systems.
 
-**Applications:**
-demonstrating how new or existing techniques can be applied in an area of current interest using R, providing a fresh view of such analyses in R that is of benefit beyond the specific application.
+- Applications: demonstrating how new or existing techniques can be applied in an area of current interest using R, providing a fresh view of such analyses in R that is of benefit beyond the specific application.
 
-**Add-on packages:**
-short introductions to contributed R packages that are already available on CRAN or Bioconductor, and going beyond package vignettes in aiming to provide broader context and to attract a wider readership than package users. Authors need to make a strong case for such introductions, based for example on novelty in implementation and use of R, or the introduction of new data structures representing general architectures that invite re-use.
+- Packages: Details of contributed R packages that are available on CRAN or Bioconductor, that go beyond a package vignette. This includes providing the broader context, implementation details, applications or examples of use, with the purpose being to make the work relevant to a wider readership than only the package users. The paper might explain the novelty in implementation and use of R, introduce new data structures or general architectures that could be re-usable for other R projects.
 
-Continuing from [R News](http://www.r-project.org/doc/Rnews/index.html), The R Journal also has a news section which includes information on:
+## History
 
-<div>
-<table class="distill-table">
-  <tbody>
-    <tr class="normal-row">
-      <td class="property">Changes in R</td>
-      <td class="reason">New features of the latest release.</td>
-    </tr>
-    <tr class="normal-row">
-      <td class="property">Changes on CRAN</td>
-      <td class="reason">New add-on packages, manuals, binary distributions, mirrors, and more.</td>
-    </tr>
-    <tr class="normal-row">
-      <td class="property">Upcoming conferences</td>
-      <td class="reason">Announcements of conferences related to R.</td>
-    </tr>
-    <tr class="normal-row">
-      <td class="property">Conference reports</td>
-      <td class="reason">Overviews of past conferences related to R. </td>
-    </tr>
-  </tbody>
-</table>
-</div>
+The R Journal was established in 2009, superseding the [R News](http://www.r-project.org/doc/Rnews/index.html).  For historical purposes it also a news section, that includes items from R Core, updates from CRAN and Bioconductor, foRwards activiies and conference reports.
+
+## Editorial board
+
+### Editor-in-Chief
+
+Di Cook, Monash University, Australia
+r-journal@r-project.org
+
+### Executive editors
+
+- Catherine Hurley, Maynooth University, Ireland
+- Simon Urbanek, The University of Auckland, New Zealand
+- Michael Kane, Yale University, USA 
+- Gavin Simpson, Aarhus University, Denmark
+
+### Associate editors
+
+- Rafael de Andrade Moral, Maynooth University, Ireland
+- Louis Aslett, Durham University, UK 
+- Elizabeth Atkinson, Mayo Clinic, USA
+- Rasmus Bååth, Lund University, Sweden
+- Przemek Biecek, University of Warsaw, Poland
+- Xiaoyue Cheng, Univerity of Nebraska, Omaha, USA
+- Katarina Domijan, Maynooth University, Ireland
+- Colin Gillespie, Newcastle University, UK
+- Isabella Gollini, University College Dublin, Ireland
+- Adam Loy, Carleton University, USA 
+- Elizabeth Sweeney, Cornell University, USA
+- Priyanga Dilini Talagala, University of Moratuwa, Sri Lanka
+- Nicholas Tierney, Telethon Kids, Australia
+- Mark van der Loo, Statistics Netherlands, the Netherlands
+- Susan Vanderplas, University of Nebraska, Lincoln, USA
+- Earo Wang, The University of Auckland, New Zealand
+- Emily Zabor, The Cleveland Clinic and Tassig Cancer Institute, USA
+
+### Editorial advisory board
+
+- Roger Bivand, Norwegian School of Economics, Bergen, Norway
+- Michael Lawrence, Genentech, Inc., San Francisco, USA
+- Bettina Grün, Johannes Kepler Universität Linz, Austria
+- Deepayan Sarkar, Indian Statistical Institute, Delhi, India
+- Friedrich Leisch, University of Natural Resources and Life - Sciences, Vienna, Austria
+- Hadley Wickham, RStudio, Houston, Texas, USA
+- Heather Turner, University of Warwick, Coventry, UK
+- John Fox, McMaster University, Hamilton, Ontario, Canada
+- Kurt Hornik, WU Wirtschaftsuniversität Wien, Vienna, Austria
+- Paul Murrell, University of Auckland, New Zealand
+- Peter Dalgaard, Copenhagen Business School, Denmark
+- Martyn Plummer, University of Warwick, UK
+- Vincent Carey, Harvard Medical School, Boston, USA
+- Torsten Hothorn, University of Zurich, Switzerland
+
+### Governance
+
+The R Journal is run under the auspices of [the R Foundation](https://www.r-project.org/foundation/), and editors of the Journal are appointed by the Foundation board.
