revised submission instructions:

--- a/submissions.Rmd
+++ b/submissions.Rmd
@@ -1,7 +1,5 @@
 ---
-title: "Submissions"
-description: |
-  Instructions for submitting an article to The R Journal
+title: "How to submit your article"
 ---
 
 ```{r setup, include=FALSE}
@@ -14,54 +12,65 @@ d-article > * {
 }
 ```
 
-# Submitting PDF-style articles
 
-Articles written for a PDF output format are still being accepted, however we
-are now encouraging authors to try writing articles with R Markdown using the
-[rjtools](rjournal.github.io/rjtools/) package. Using this package allows for
-submissions suitable for both interactive online articles and static PDF copies.
+Articles for the R Journal are short to medium length, no more than 20 pages, on topics of interest to the R community. The submission needs to include:
 
-You can find the current submission guidelines for PDF-only (non-rmarkdown)
-articles here: <https://journal.r-project.org/submissions.html>
+- paper files to build the article including the `.Rmd`, `.tex`, `.bib`, `.sty`, figures. 
+- file to reproduce the results, including R scripts, and data.
+- motivating letter that describes why your paper is suitable for the consideration by the R Journal.
+- if needed, supplementary files that might include additional technical details or examples.
 
-# Submitting HTML-style articles
+# Creating your article 
 
-These instructions are actively being worked on, so please reach out if you have
-questions or issues. You can get started with an article using the 
-`rjtools::create_article()` function. This function provides a template that
-demonstrates the expected structure of R Journal articles in an R Markdown 
-format.
+The [rjtools](https://rjournal.github.io/rjtools/) package has a template to create the files needed for a submission in the form required by the R Journal. 
 
-If you currently use the `rticles::rjournal_article` output format for R 
-Markdown, you should be simply able to change output formats to 
-`rjtools::rjournal_web_article` to preview the web format of your article.
-Existing guidelines for referring to CRAN packages with `\CRANpkg{}` and other
-macros should still work, however other LaTeX specific code will not.
+It is strongly recommended that you use the `create_article()` function. Knitting the Rmd will generate both an HTML and PDF format of your paper. 
 
-When writing your article you should aim to write without specific reference to
-HTML and LaTeX codes. If you do need to write code specific to the HTML or PDF
-output, you can use `knitr::is_html_output()` and `knitr::is_latex_output()` to
+If you currently use the `rticles::rjournal_article` output format for R Markdown, you should be simply able to change output formats to `rjtools::rjournal_web_article` to switch to the new style.
+
+When writing your article you should aim to write without specific reference to HTML and LaTeX codes. If you do need to write code specific to the HTML or PDF output, you can use `knitr::is_html_output()` and `knitr::is_latex_output()` to
 conditionally produce a particular output.
 
-The web articles for the R Journal are based on the [distill framework], which
-provides several styling and arrangement options for your article contents.
-The distill R package documentation (generally also applicable to articles 
+The web articles for the R Journal are based on the [distill framework], which provides several styling and arrangement options for your article contents. The distill R package documentation (generally also applicable to articles 
 written for the R Journal) describes how various article elements can be used:
 https://rstudio.github.io/distill/
 
-We are especially looking for creative uses of interactive content in articles, 
-however please aim to keep the file sizes of articles minimal.
+We are especially looking for creative uses of interactive content in HTML formatted articles. This will require that you make different code chunks evaluated conditionally using `eval=knitr::is_html_output()` or `eval=knitr::is_latex_output()` with appropriate re-captioning, and conditional inline reference links. Interactive plots should be produced with a manageable file size (aim for under 10Mb) which may require small data examples.
+
+For the immediate future, articles generated using the existing [latex style](https://journal.r-project.org/share/author-guide.pdf) will also be accepted. 
+
+# Checking your article
+
+The `rjtools` package has a number of functions which can help you check that your article is ready to submit. These include:
+
+- XXX
 
 # Instructions for submitting
 
 ### New submission
 
-To submit a new article to the R Journal, please complete the form linked below. Note that journal policy changed in early 2017, and submissions of the "add-on packages" type will henceforth be subject to more rigorous scrutiny. If you are making a submission of this type, you should prepare a letter explaining how you meet our [stronger requirements](https://journal.r-project.org/) described prominently at the beginning of this website and in our [Instructions for Authors](https://rjournal.github.io/share/author-guide.pdf).
+To submit a new article to the R Journal, you will need to complete. You will need to provide these details:
 
-If you have problems, first try to reduce the size of your submission zipfile as much as possible. If this does not help, please contact the Editor-in-Chief at <r-journal@r-project.org>.
+- Your name.
+- An email address for the corresponding author. Try to ensure it is an address that will be available in the long term, through the review process and after the paper is published so that readers can contact you about your work if desired.
+- An alternate email address, in case email to the primary address doesn't respond to editors requests.
+- Names of all authors.
+- Article title.
+- Article type.
+- Article keywords/tags. You should be prepared to select at least one or two from the list (current CRAN Task Views) and you are free to add an additional words or phrases that accurately describe your paper.
+- **Zip** file containing:
+    - paper files to build the article including the `.Rmd`, `.tex`, `.bib`, `.sty`, figures. 
+    - file to reproduce the results, including R scripts, and data.
+    - motivating letter that describes why your paper is suitable for the consideration by the R Journal.
+    - if needed, supplementary files that might include additional technical details or examples.
+- List of the supplementary files (as they are provided in your unzipped file set). These include any `.Rmd`, `.R`, data files like `.csv`, `.rda`, `.rds`, and supplementary documents that contain additional technical details for examples. It should NOT contain a list of figure files. This list is used to automatically build the `.zip` file that is distributed along with your paper, when it is published. Think about this as the list of files that contain all the other information that might be relevant for the reader of your article.
+
+You may have problems submitting if size of your submission zip file is more than 10Mb. If you have large files, for example, data files, you can make them available on an alternative site and provide the links in the paper. If you have problems, please contact the Editor-in-Chief at <r-journal@r-project.org>.
+
+Your paper will be checked for reproducibility by running the code provided. Please ensure that the examples can be run in a timely manner, perhaps by reducing the example data size. If necessary, intermediate output files, can be provided to shorten the run time.
 
 ### Re-submission or revision
 
-Re-submission and revisions to accepted articles are received through the same site where new submissions are received (link below). When providing a re-submission or revision, please enter the identifier of the original submission in the last field of the submission form below.
+Re-submission and revisions to accepted articles are received through the same site where new submissions are received (link below). When providing a re-submission or revision, you will need to **enter the identifier of the original submission** in the last field of the submission form. This also needs to be done if your paper has previously been rejected, and you have made appropriate corrections for it to be considered again.
 
 ### [Click here to submit an article, re-submission, or revision](https://forms.gle/ykj6QcoGQD5ctnA5A).
