--- a/archive/RJournal.bib
+++ b/archive/RJournal.bib
@@ -361,6 +361,18 @@
 }
     
   
+    
+@article{RJ-2021-088,
+  author = {Shaobo Li and Xiaorui Zhu and Yuejie Chen and Dungang Liu},
+  title = {{PAsso: an R Package for Assessing Partial Association
+          between Ordinal Variables}},
+  year = {2021},
+  journal = {{The R Journal}},
+  url = {https://journal.r-project.org/archive/2021/RJ-2021-088/index.html}
+  note = {Accepted, may change after copy-editing.}
+}
+    
+  
 
   
     
