added link to metrics

--- a/index.Rmd
+++ b/index.Rmd
@@ -62,6 +62,8 @@ The R Journal reaches a wide audience and has a thorough review process. Papers 
 * explain the motivation for their contribution;
 * provide code to reproduce the material in the paper.
 
+R Journal's impact factor is increasing, as reported by  [SJR](https://www.scimagojr.com/journalsearch.php?q=21100255423&tip=sid), indicating the the journal is considered very useful and helpful by the academic community. 
+
 ## Article types
 
 The R Journal accepts a variety of article topics including:
